<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Awesome Finance Planner</string>
    <string name="overview">Overview</string>
    <string name="synchronize">Synchronize</string>
    <string name="transactions">Transactions</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category name</string>
    <string name="category_icon">Category icon</string>
    <string name="icon">Icon</string>
    <string name="transactions_no_items">No transactions to display</string>
    <string name="fetching_transactions">Synchronizing transactions...</string>
    <string name="wait">Saving changes...</string>
    <string name="icon_prompt">Choose an icon</string>
    <string name="category_prompt">Choose a category</string>
    <string name="last_synchronized">Synchronized</string>
    <string name="internal_t_count">Transactions</string>
    <string name="internal_tag_count">Tags</string>
    <string name="not_synchronized">Never</string>
    <string name="transaction_text">Text</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_change_date">Change date</string>
    <string name="transaction_average">Average consumption</string>
    <string name="per_day">Per day</string>
    <string name="per_week">Per week</string>
    <string name="last_transactions">Last transactions</string>
    <string name="tagging">Tagging transactions...</string>
    <string name="category">Category</string>
    <string name="please_wait">Please wait...</string>
    <string name="retrieving_date">Retrieving data...</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="transaction_updated">Transaction updated</string>
    <string name="unsynced_count">Changes not synchronized</string>
    <string name="clear_db">Clear database</string>
    <string name="db_cleared">Internal database has been emptied</string>
    <string name="untagged_count">Not tagged</string>
    <string name="suggested_tag">Suggested tag</string>
    <string name="notification_title">New transaction!</string>
    <string name="new_transaction">New transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="add_transaction">Add transaction</string>
    <string name="server_unavailable">Could not synchronize. Server is
        unavailable.
    </string>
    <string name="confirm">OK</string>
    <string name="notification">You have %s new transaction(s)</string>
    <string name="not_tagged">Ukategorisert</string>
    <string name="auto_tag" formatted="false">There %s other exact matches for this transaction and %s similar ones.
        Which ones do you want to tag in addition to this one?
    </string>
    <string name="auto_tag_exact">There are %s other exact matches for this transaction. Which ones do you want to
        tag in addition to this one?
    </string>
    <string name="auto_tag_similar">There are %s similar matches for this transaction. Which ones do you want to tag
        in addition to this one?
    </string>
    <string name="tag_exact">Exact matches</string>
    <string name="tag_all">Exact and similar matches</string>
    <string name="tag_similar">Similar matches</string>
    <string name="tag_single">Only this one</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="invalid_tag_name">Invalid tag name</string>
    <string name="transaction_added">Transaction added</string>
    <string name="pie_chart">Pie chart</string>
    <string name="save">Save</string>
    <string name="total">Total</string>
    <string name="selected" formatted="false">%s of %s selected</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="menu_suggest">Find tag suggestions</string>
    <string name="fetching_tags">Performing magic...</string>
    <string name="transaction_count" formatted="false">%s transaction(s)</string>
    <string name="username">Username</string>
    <string name="settings">Settings</string>
    <string name="suggestions_notfound">Sorry. Could not find any suggestions.</string>
</resources>
