<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              style="@style/default_bg_color"
              android:focusable="true" android:focusableInTouchMode="true">
    <TextView android:background="@drawable/bg_bar_02"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:gravity="center"
              android:paddingTop="2dip"
              android:text="@string/new_transaction"
              style="@style/title_text"/>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:orientation="vertical" android:layout_weight="1">
        <TableLayout android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:padding="20dip"
                     android:stretchColumns="1">
            <TableRow>
                <TextView android:layout_weight="1" android:layout_width="0dip"
                          android:padding="3dip"
                          android:textStyle="bold" android:textColor="@android:color/white"
                          android:layout_height="wrap_content"
                          android:text="@string/transaction_text"/>
                <EditText android:id="@+id/edittext_text" android:layout_weight="1"
                          android:layout_width="0dip"
                          android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_weight="1" android:layout_width="0dip"
                          android:id="@+id/dateDisplay"
                          android:padding="3dip" android:textStyle="bold"
                          android:textColor="@android:color/white"
                          android:layout_height="wrap_content"
                          android:text="@string/transaction_date"/>
                <Button android:id="@+id/pickDate" android:layout_weight="1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction_change_date"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_weight="1" android:layout_width="0dip"
                          android:padding="3dip"
                          android:textStyle="bold" android:textColor="@android:color/white"
                          android:layout_height="wrap_content"
                          android:text="@string/transaction_amount"/>
                <EditText android:id="@+id/edittext_amount"
                          android:layout_weight="1" android:layout_width="0dip"
                          android:layout_height="wrap_content"
                          android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_weight="1" android:layout_width="0dip"
                          android:padding="3dip"
                          android:textStyle="bold" android:textColor="@android:color/white"
                          android:layout_height="wrap_content"
                          android:text="@string/category_prompt"/>
                <Spinner android:id="@+id/spinner_category"
                         android:layout_weight="1" android:layout_width="0dip"
                         android:layout_height="wrap_content"
                         android:prompt="@string/category_prompt"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <Button android:text="@string/add_transaction"
            android:textColor="@android:color/white"
            android:id="@+id/button_add_transaction" android:layout_weight="0"
            android:background="@drawable/button_green"
            android:layout_width="fill_parent"
            android:textStyle="bold"
            android:layout_height="50dip"/>
</LinearLayout>
